@@ -19,7 +19,7 @@ import static edu.colorado.phet.common.phetcommon.simsharing.Parameter.param;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ModelActions.bounced;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ModelActions.landed;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.isFloor;
-import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.track;
+import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.trackIndex;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.SharedComponents.skater;
 
 /**
@@ -544,7 +544,7 @@ public class Particle implements Serializable {
             boolean velocityTowardTrack = isVelocityTowardTrack( origLoc, cubicSpline, newAlpha );
             if ( bounce || !velocityTowardTrack ) {
 
-                SimSharingManager.sendModelMessage( skater, bounced, param( track, cubicSpline.index ).param( isFloor, cubicSpline instanceof LinearFloorSpline2D ) );
+                SimSharingManager.sendModelMessage( skater, bounced, param( trackIndex, cubicSpline.index ).param( isFloor, cubicSpline instanceof LinearFloorSpline2D ) );
                 double energyBeforeBounce = getTotalEnergy();
                 setVelocity( newVelocity );
 
@@ -562,7 +562,7 @@ public class Particle implements Serializable {
             else {
                 //grab the track
                 double dE0 = getTotalEnergy() - origEnergy;
-                SimSharingManager.sendModelMessage( skater, landed, param( track, cubicSpline.index ).param( isFloor, cubicSpline instanceof LinearFloorSpline2D ) );
+                SimSharingManager.sendModelMessage( skater, landed, param( trackIndex, cubicSpline.index ).param( isFloor, cubicSpline instanceof LinearFloorSpline2D ) );
                 switchToTrack( cubicSpline, newAlpha, origAbove[searchState.getIndex()] );
                 double dE2 = getTotalEnergy() - origEnergy;
                 if ( Math.abs( dE2 ) > 1E-6 ) {
